--- a/ios/Config/config.xcconfig
+++ b/ios/Config/config.xcconfig
@@ -3,6 +3,6 @@ PRODUCT_BUNDLE_IDENTIFIER = $(BUNDLE_IDENTIFIER)$(BUNDLE_IDENTIFIER_APPEND)
 BUNDLE_DISPLAY_NAME = FTD TeamCenter Connector
 BUNDLE_IDENTIFIER = myapp.app
 
-RUNTIME_URL = http:\/\/localhost:8080
+RUNTIME_URL = http:\/\/70.0.0.159:4544
 
 PRODUCT_NAME = App
